tests/machine/x/zig/json_builtin.error
Error on line 14: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/json_builtin.zig:14:13: error: local variable shadows declaration of 'm'
/workspace/mochi/tests/machine/x/zig/json_builtin.zig:10:1: note: declared here

13:     m = blk0: {
14:         var m = std.AutoHashMap(i32, i32).init(std.heap.page_allocator);
15:         m.put("a", @as(i32, @intCast(1))) catch unreachable;
